Update tribute .html

--- a/tribute .html
+++ b/tribute .html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+	<link rel ="sytlesheet" type="text/css" href="tribute.css">
 	<title>tribute page </title>
 </head>
 <body>
